<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/grey"
>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/nametextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Description"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/descriptiontextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/possible_symptoms"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/possibleSymptomstextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Synonyms"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/synonymstextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/medical_condition"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/medicalConditiontextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Prof Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/profNametextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CardView.MyApp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/treatment_description"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
                <TextView
                        android:id="@+id/treatmentDescriptiontextViewIssueInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="Name"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/specialisationListContainer"
                style="@style/CardView.MyApp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tilteSpecialisationList"
                    android:padding="@dimen/text_padding"
                    android:text="Specialisation"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

            <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/chipGroupSpecialisationList"
                    android:padding="@dimen/text_padding"
                    android:text="Name"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
        </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:visibility="visible"
                tools:visibility="visible"
                style="@style/CardView.MyApp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>